--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ services:
   - docker
 
 script:
+  - chmod +x .s2i/bin/assemble .s2i/bin/run .s2i/bin/save-artifacts .s2i/bin/usage
   - docker build -t kabassu/kabassu-s2i .
 
 after_success:
