--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
 before_script:
   - wget https://github.com/openshift/source-to-image/releases/download/v1.1.8/source-to-image-v1.1.8-e3140d01-linux-amd64.tar.gz -O /tmp/s2i.tar.gz
   - tar -xvf /tmp/s2i.tar.gz
-  - ls /tmp
+  - ls $PWD
   - export PATH=$PATH:$PWD
 
 script:
