--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ script:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
     docker login -u "$DOCKER_USER" -p "$DOCKER_PASSWORD";
     docker push kabassu/kabassu-s2i;
-    s2i build https://github.com/Kabassu/kabassu kabassu/kabassu-s2i:latest kabassu/kabassu
+    s2i build https://github.com/Kabassu/kabassu kabassu/kabassu-s2i:latest kabassu/kabassu;
     docker push kabassu/kabassu;
     fi
 
