--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,10 @@ before_script:
   - export PATH=$PATH:$PWD
 
 script:
-  - chmod +x .s2i/bin/assemble .s2i/bin/run .s2i/bin/save-artifacts .s2i/bin/usage
-  - docker build -t kabassu/kabassu-s2i .
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
+    chmod +x .s2i/bin/assemble .s2i/bin/run .s2i/bin/save-artifacts .s2i/bin/usage
+    docker build -t kabassu/kabassu-s2i .
     docker login -u "$DOCKER_USER" -p "$DOCKER_PASSWORD";
     docker push kabassu/kabassu-s2i;
-    s2i build https://github.com/Kabassu/kabassu kabassu/kabassu-s2i:latest kabassu/kabassu;
-    docker push kabassu/kabassu;
     fi
 
